@@ -41,6 +41,7 @@ IMI_SOURCES = \
 	$(DRIVER_SRC_DIR)/IMI/Register.cpp
 
 LX_SOURCES = \
+	$(DRIVER_SRC_DIR)/LX/NanoLogger.cpp \
 	$(DRIVER_SRC_DIR)/LX/Protocol.cpp \
 	$(DRIVER_SRC_DIR)/LX/Mode.cpp \
 	$(DRIVER_SRC_DIR)/LX/Parser.cpp \
