@@ -8,6 +8,8 @@ Version 6.5 - not yet released
 * calculations
   - don't detect landing while climbing in a wave (#1330, #2289)
   - basic support for the contest "DMSt" (#2208)
+* devices
+  - LX: support flight download from LXNAV Nano
 * user interface
   - preselect first item with details in map item list for
     faster access (#2069, #2207)
